# wheezy.routing

./: .hgignore  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  release.yml
demos/hello/: helloworld.py  test_helloworld.py
demos/time/: app.py  config.py  test_functional.py  urls.py  views.py
doc/: conf.py  examples.rst  gettingstarted.rst  index.rst  modules.rst  userguide.rst
requirements/: dev-py2.txt  dev-py3.txt  dev.txt  docs.txt
src/wheezy/routing/: __init__.py  builders.py  choice.py  comp.py  config.py  curly.py  p2to3.py  plain.py  regex.py  route.py  router.py  utils.py
src/wheezy/routing/tests/: __init__.py  test_builders.py  test_choice.py  test_config.py  test_curly.py  test_import.py  test_plain.py  test_regex.py  test_route.py  test_router.py  test_utils.py
