[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wheezy.routing"
dynamic = ["version"]
description = "A lightweight path routing library"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Andriy Kornatskyy", email = "andriy.kornatskyy@live.com" }]
keywords = ["routing", "path", "url", "patterns", "match", "web", "mapping"]
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Internet :: WWW/HTTP :: WSGI",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
cython = ["Cython>=3.0", "setuptools>=61.0"]

[project.urls]
Homepage = "https://github.com/akornatskyy/wheezy.routing"
Source = "https://github.com/akornatskyy/wheezy.routing"
Issues = "https://github.com/akornatskyy/wheezy.routing/issues"

[tool.setuptools]
packages = ["wheezy.routing"]
package-dir = { "" = "src" }
zip-safe = false
include-package-data = true

# [tool.setuptools.package-data]
# "wheezy.routing" = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "wheezy.routing.__version__" }

[tool.coverage.run]
source = ["src/wheezy/routing"]
omit = ["*/test_*.py", "*/tests/*"]
